--- a/style.css
+++ b/style.css
@@ -589,7 +589,7 @@ button:hover {
 .terminos-condiciones li p b {
     font-family: 'Sinteca Bold', sans-serif;
     font-size: 1.3rem;
-    color: #899685;
+    color: #fcf1eb;
     display: block;
     margin-bottom: 10px;
 }
