--- a/style.css
+++ b/style.css
@@ -514,6 +514,10 @@ button:hover {
       flex: 1 1 600px;
       z-index: 2; /* Asegura que el bloque esté encima de la imagen */
     }
+.bloque-tratamiento:hover {
+      transform: translateY(-5px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    }
 
     .bloque-tratamiento .texto h3 {
       font-family: 'Safira', sans-serif;
