--- a/style.css
+++ b/style.css
@@ -564,9 +564,9 @@ button:hover {
 
 .terminos-condiciones > p {
     font-size: 1.1rem;
-    color: #fcf1eb;
+    color: #899685;
     margin-bottom: 1.5rem;
-    text-align: center;
+    text-align: left;
 }
 
 .terminos-condiciones ul {
