--- a/style.css
+++ b/style.css
@@ -393,7 +393,7 @@ button:hover {
   width: 100%;
   padding: 0.8rem;
   font-size: 1rem;
-  border: 1px solid #ddd;
+  border: 1px solid #899685;
   border-radius: 4px;
   margin-bottom: 1rem;
 }
@@ -402,7 +402,7 @@ button:hover {
      width: 100%;
   padding: 0.8rem;
   font-size: 1rem;
-  border: 1px solid #ddd;
+  border: 1px solid #899685;
   border-radius: 4px;
   margin-bottom: 1rem; 
 }
@@ -416,8 +416,8 @@ button:hover {
 
 .botones button {
   flex: 1;
-  padding: 1rem;
-  font-size: 0.5rem;
+  padding: 0.4rem 1rem;
+  font-size: 0.9rem;
   background-color: #F0E5DE;
   color: #899685;
   border: none;
