--- a/style.css
+++ b/style.css
@@ -303,6 +303,23 @@ button:hover {
   text-align: right;
   padding-right: 1rem;
 }
+.redes-sociales img {
+  display: inline-block;
+  border: none;
+}
+
+.redes-sociales a {
+  text-decoration: none;
+  outline: none;
+  border: none;
+}
+
+.redes-sociales a:focus,
+.redes-sociales a:active,
+.redes-sociales a:visited {
+  outline: none;
+  border: none;
+}
 
 .icono-red {
   width: 30px;
